Fix backup save function bug
Change id "save_check" to checkbox-local-backup;
Add id name to the input checkbot at iRT.html

--- a/iRT.html
+++ b/iRT.html
@@ -258,7 +258,7 @@
     </script>
     <span class="hidden-elem" >
       | Download backup copy of data?
-      <input type="checkbox" onchange="localSaveSwitch(this)"> 
+      <input id="checkbox-local-backup" type="checkbox" onchange="localSaveSwitch(this)"> 
     </span>
   </div>
   <script src="javascript/scripts.js"></script> <!--needs to load last, uses some elements from the page itself-->
