--- a/iRT.html
+++ b/iRT.html
@@ -291,7 +291,7 @@
 
   <button class="debug" id="next_stage_button_debug" onclick="nextStage()">Next stage</button>
   <br>
-  <div id="last-updated" class="unhider" style="position:absolute; bottom:5px; left:5px; font-size:x-small; " >
+  <div id="last-updated" class="unhider fixed-footer" style=" font-size:x-small; " >
     <script>
       document.write(`Last updated: `+ document.lastModified);
     </script>
