Update .style.visibility calls
Change .style.visibility calls to hideById() or unhideById().

--- a/iRT.html
+++ b/iRT.html
@@ -194,7 +194,7 @@
     <br>
     <!-- end paper task -->
     <button id="button-end-psvtr" style="visibility:hidden" 
-      onclick='nextStage(); document.getElementById("jspsych-content").style.visibility="visible";'>
+      onclick='nextStage(); unremoveById("jspsych-content");'>
       Next
     </button>
   </section>
