Clean post-corsi feedback
score and correct answers are logged in the console now

--- a/iRT.html
+++ b/iRT.html
@@ -204,12 +204,11 @@
     <p>Corsi block-tapping task</p>
 
     <div id='corsi-result' style="display:none">
-      <p><span id="corsi-correct-span">0</span> out of <span id="corsi-count-span">2</span> correct answers.</p>
-      <p>Your score was <span id='corsi-score-span'>1</span>. </p>
-      <p>Please, proceed to the next task </p>
+      <p>Blocos de Corsi concluído. Aperte 'Próximo' para prosseguir
+      </p>
       <button id="endOfCorsiButton"  onclick='nextStage();
       document.getElementById("iRT-instructions").innerHTML = instructionTextiRT;'>
-        Next
+        Próximo
       </button>
     </div> 
   </section>
