Change input birthday to age (date to number)

--- a/iRT.html
+++ b/iRT.html
@@ -99,8 +99,7 @@
           <label for="p_sex_female">Feminino</label>
         </p>
         <p> Idade: <br>
-          <label for="p_birthday">Nascimento:</label>
-          <input type="date" id="p_birthday" name="birthday">
+          <input type="number" name="p_age" min="1">
         </p>
         <p> Etnia: <br>
           <input type="text" name="p_ethnic">
