Update corsi block text to ptbr

--- a/iRT.html
+++ b/iRT.html
@@ -238,10 +238,10 @@
 
   <!-- corsi block tapping task from jsPsych -->
   <section id="corsi-task-container" class="ContentStage" style="display:none"> 
-    <p>Corsi block-tapping task</p>
+    <p>Blocos de Corsi</p>
 
     <div id='corsi-result' style="display:none">
-      <p>Blocos de Corsi concluído. Aperte 'Próximo' para prosseguir
+      <p>Aperte 'Próximo' para prosseguir
       </p>
       <button id="endOfCorsiButton"  onclick='nextStage();
       document.getElementById("iRT-instructions").innerHTML = instructionTextiRT;'>
