--- a/iRT.html
+++ b/iRT.html
@@ -250,7 +250,7 @@
     </div> 
   </section>
 
-  <!-- interactive Rotation Tasks (iRT) -->
+  <!-- iRT - interactive Rotation Tasks -->
   <section id="tab_iRT" class="ContentStage" style="display:none">  <!-- JSmol interactive tasks -->
     <div class="debug" id="indicador_orientacao" style="background-color:gray">Test</div> <!-- orientation coordinates -->
 
@@ -308,7 +308,7 @@
     
   </section>
   
-  <!-- End of trials -->
+  <!-- End of trials: agradecimentos-->
   <section id="tab_fim" class="ContentStage" style="display:none"> <!-- Final words -->
     "Muito obrigado por participar da nossa pesquisa!"<br>
     "Thank you for taking part in our research!"<br>
