Update getLocalData() call and data structure
Updated local backup .csv data structure
Now correctly split fields with ";" instead of ","
First row split in 2 with headers in 1st line and values in second line
change 'data' variable name to 'localData' (inside function) or 'backupData' (outside function)
Change corsiTrialCorrect and corsiTrialCount to corsiAnswer array. Length is corsiTrialCount, and sum is corsiTrialCorrect.
Add comments and console.logs for clarity

--- a/iRT.html
+++ b/iRT.html
@@ -148,8 +148,9 @@
         <input type="hidden" name="modelName">
         <input type="hidden" name="paperAnswer">
         <input type="hidden" name="corsiScore">
-        <input type="hidden" name="corsiTrialCorrect">
-        <input type="hidden" name="corsiTrialCount">
+        <!--<input type="hidden" name="corsiTrialCorrect">
+        <input type="hidden" name="corsiTrialCount">-->
+        <input type="hidden" name="corsiAnswer">
         
       </form>
     </div>
