Change function insert_Form_Values() to insertFormValues()

--- a/iRT.html
+++ b/iRT.html
@@ -118,7 +118,8 @@
         </script>
 
         <!-- internal values to be sent by forms -->
-        <!-- Changes here should be replicated in scripts.js -->
+        <!-- Changes here should be replicated in scripts.js: 
+         insertFormValues() and getLocalData() -->
         <input type="hidden" name="sessionID">
         <input type="hidden" name="taskID">
         <input type="hidden" name="pxAngstRatio">
