Add mouseX and mouseY positions

--- a/iRT.html
+++ b/iRT.html
@@ -130,6 +130,8 @@
         <input type="hidden" name="fQj">
         <input type="hidden" name="fQk">
         <input type="hidden" name="fQr">
+        <input type="hidden" name="mouseX">
+        <input type="hidden" name="mouseY">
         <input type="hidden" name="ref_i">
         <input type="hidden" name="ref_j">
         <input type="hidden" name="ref_k">
