Update function names
For consistency (change under_scores to camelCase) and clarity (buttonStart change to iRTStart).

--- a/iRT.html
+++ b/iRT.html
@@ -264,7 +264,7 @@
 
     <table id="table-iRT-canvas"> 
       <tr>
-        <button id="startButton" onclick="buttonStart();removeById('iRT-instructions')">Começar!</button>
+        <button id="startButton" onclick="iRTStart();removeById('iRT-instructions')">Começar!</button>
         <button id="submitButton" onclick="buttonSubmit()" style="visibility:hidden" form="gsForm">Pronto!</button>
       </tr>
       <tr>
