Add next trial debug button inside debug section

--- a/iRT.html
+++ b/iRT.html
@@ -46,8 +46,9 @@
         </ul>
         <!-- start the different tasks of the interactive test -->
         <div id="button-container"></div>
-        <hr>
       </nav>
+      <button class="debug" id="next_stage_button_debug" onclick="nextStage()">Next stage</button>
+      <hr>
     </div>
   </section>
   
