--- a/iRT.html
+++ b/iRT.html
@@ -54,7 +54,7 @@
   </section>
   
   <!-- Forms -->
-  <section id="tab_form" class="ContentStage current-ContentStage" style="display:block"> 
+  <section id="tab_form" class="ContentStage ContentStage-now" style="display:block"> 
     <div id="div_form">
       <form name="submit-to-google-sheet" id="gsForm" autocomplete="off">
         <!-- Escreva nome e email para contato caso queira receber notícias
